# MILO-Robot

./: .gitignore  README.md  project-milo-plan.md
IOT-Testing/: README.md
IOT-Testing/iot_tester/: app.py  widgets.py
IOT-Testing/iot_tester/screens/: display.py  i2c_scan.py  servos.py  speaker.py  wiring.py
IOT-Testing/tests/: test_app_integration.py  test_camera_screen.py  test_display_screen.py  test_i2c_scan.py  test_results_screen.py  test_servos_screen.py  test_wiring.py
MILO-Dashboard/: README.md  pyproject.toml
MILO-Dashboard/milo_dashboard/: app.py
MILO-Dashboard/milo_dashboard/collectors/: __init__.py  services.py  system.py
MILO-Dashboard/tests/: test_network.py  test_seams.py  test_storage.py
brain/: README.md  pyproject.toml
brain/milo_brain/: __init__.py  __main__.py  config.py  conversation.py  logbuf.py  mcp_client.py  server.py  session.py
brain/milo_brain/llm/: agent.py  token_rate.py
brain/milo_brain/net/: connector.py  discovery.py
brain/milo_brain/pipelines/: _lazy.py  asr.py  direction.py  tts.py  vad.py  vision.py
brain/milo_brain/tui/: __init__.py  app.py  connect_by_ip.py  connect_robots.py  dashboard.py  logs.py  model_picker.py  pairing.py
brain/milo_brain/ui/: tray.py
brain/tests/: test_agent.py  test_cognition_session.py  test_connector.py  test_conversation.py  test_discovery.py  test_end_to_end_pairing.py  test_logbuf.py  test_mcp_client.py  test_pipelines.py  test_server_integration.py  test_token_rate.py  test_tui_app.py  test_tui_connect_by_ip.py  test_tui_connect_robots.py  test_tui_dashboard.py  test_tui_logs.py  test_tui_model_picker.py  test_tui_pairing.py
brain/tools/: mdns_probe.py
bridge/: README.md  pyproject.toml
bridge/assets/faces/: README.md  eyes.py
bridge/milo_bridge/: README.md  __init__.py  characterize.py  cli.py  config.py  crashlog.py  main.py  poses.py  sleep.py
bridge/milo_bridge/drivers/: audio.py  camera.py  display.py  imu.py  null_hardware.py  servos.py  smooth_servos.py
bridge/milo_bridge/gait/: balance.py  cpg.py  engine.py  policy.py
bridge/milo_bridge/graph/: api.py  store.py
bridge/milo_bridge/mcp/: auth.py  deps.py  server.py
bridge/milo_bridge/net/: advertiser.py  discovery.py  pairing.py  server.py  session.py  streams.py
bridge/milo_bridge/webapp/: __init__.py  auth.py  control.py  deps.py  logbuf.py  media_hub.py  motion.py  server.py  session_auth.py  telemetry.py  ws.py
bridge/milo_bridge/webapp/api/: __init__.py  auth.py  brains.py  graph.py  imu.py  logs.py  media.py  motion_meta.py  speak.py  status.py  system.py
bridge/milo_bridge/webapp/static/: index.html  login.html
bridge/milo_bridge/webapp/static/css/: console.css  grid.css  theme.css
bridge/milo_bridge/webapp/static/js/: bus.js  grid.js  icons.js  layout.js  login.js  main.js  pilot.js  registry.js  statusbar.js
bridge/milo_bridge/webapp/static/js/cards/: camera.js  ears.js  graph.js  log.js  move.js  poses.js  sensors.js  servos.js  status.js  voice.js
bridge/milo_bridge/webapp/static/js/panels/: brain.js  camera.js  comm.js  crashlog.js  graph.js  log.js  move.js  poses.js  power.js  sensors.js  servos.js
bridge/systemd/: milo-bridge.service
bridge/tests/: test_advertiser.py  test_audio.py  test_balance.py  test_camera.py  test_characterize.py  test_cli.py  test_config.py  test_convert_faces.py  test_crashlog.py  test_discovery.py  test_display.py  test_eyes.py  test_gait.py  test_generate_faces.py  test_graph.py  test_imu.py  test_main.py  test_main_crashlog.py  test_main_mcp_wiring.py  test_media_hub.py  test_null_hardware.py  test_pairing_controller.py  test_poses.py  test_server.py  test_servos.py  test_session.py  test_sleep.py  test_smooth_servos.py  test_streams.py
bridge/tests/mcp/: test_auth.py  test_deps.py  test_server.py
bridge/tests/webapp/: client_helpers.py  fakes.py  test_auth.py  test_auth_api.py  test_brains_api.py  test_control.py  test_graph_api.py  test_imu_api.py  test_logs.py  test_media_endpoints.py  test_media_hub.py  test_motion.py  test_server.py  test_session_auth.py  test_static_integrity.py  test_status.py  test_system.py  test_ws.py
bridge/tools/: convert_faces.py  generate_faces.py  servo_sweep.py  webdev.py
common/: README.md  pyproject.toml
common/milo_common/: __init__.py  auth.py  graph_types.py  handshake.py  protocol.py  testing.py
common/tests/: test_auth.py  test_graph_types.py  test_handshake.py  test_protocol.py
docs/: ARCHITECTURE.md  BUILD-PLAN.md  GETTING-STARTED.md  README.md  SOFTWARE-SETUP.md  VOICE-PIPELINE.md  WEB-DASHBOARD.md  WIRING-GUIDE.md
docs/dev-logs/: newissuesv1.md  sesame-firmware-deep-dive.md
docs/specs/: 2026-07-05-project-milo-design.md
docs/superpowers/plans/: 2026-07-12-iot-testing-manual-control-panels.md  2026-07-12-iot-testing-tui.md  2026-07-13-dashboard-auth-grid-servo-batch.md  2026-07-13-eve-style-face-eyes.md  2026-07-13-imu-3d-plate.md  2026-07-13-imu-unified-plate.md  2026-07-13-milo-dashboard.md  2026-07-13-milo-web-dashboard.md  2026-07-13-webapp-console-redesign.md  2026-07-15-boot-manual-servo-crab-balance-fixes.md  2026-07-15-central-motion-controller.md  2026-07-15-hardware-resilience-boot-and-dpad.md  2026-07-16-camera-fov-recording-fullscreen-emotes.md  2026-07-17-milo-brain-tui.md  (+13 more)
hardware/: README.md
hardware/reference-sesame/: README.md
iot-testing/: PINOUT.md  README.md  pyproject.toml
iot-testing/iot_tester/: app.py  results_log.py
iot-testing/iot_tester/screens/: camera.py  imu.py  microphones.py  results.py
iot-testing/tests/: test_display_screen.py  test_imu_screen.py  test_microphones_screen.py  test_results_log.py  test_servos_screen.py  test_speaker_screen.py  test_widgets.py  test_wiring.py
milo-dashboard/: README.md
milo-dashboard/milo_dashboard/: __init__.py  check.py  widgets.py
milo-dashboard/tests/: test_check.py  test_services.py  test_system.py  test_widgets.py
training/: README.md  pyproject.toml
training/milo_training/: __init__.py  env.py  export_onnx.py  train_ppo.py
training/models/: milo.xml
training/tests/: test_env_contract.py
(+30 files in other folders)
