[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "milo-dashboard"
version = "0.1.0"
description = "Project Milo dashboard: live TUI system/network/storage/services monitor for the Pi"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "textual>=0.60",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
milo-dash = "milo_dashboard.app:main"

[tool.setuptools.packages.find]
include = ["milo_dashboard*"]
