[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "milo-brain"
version = "0.1.0"
description = "Milo Brain: desktop LLM/speech/vision compute for the Milo robot"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "milo-common",
    "numpy>=1.26",
    "websockets>=12",
    "zeroconf>=0.130",
    "pyyaml>=6",
    "httpx>=0.27",
    "mcp>=1.9",
    "textual>=0.60",
]

[project.optional-dependencies]
# The full model stack — needs a GPU machine.
full = [
    "faster-whisper>=1.0",
    "insightface>=0.7",
    "onnxruntime-gpu>=1.17; platform_system != 'Darwin'",
    "piper-tts>=1.2",
    "torch>=2.2",          # Silero VAD
    "torchaudio>=2.2",     # Silero VAD's torch.hub repo imports this at load time
    "opencv-python>=4.9",
]
dev = ["pytest>=8"]

[project.scripts]
milo-brain = "milo_brain.__main__:main"

[tool.setuptools.packages.find]
include = ["milo_brain*"]
