[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "milo-common"
version = "0.1.0"
description = "Shared robot<->brain WebSocket protocol and pairing/auth for Project Milo"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["milo_common*"]
