[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "milo-training"
version = "0.1.0"
description = "Milo gait training: MuJoCo sim + PPO -> ONNX policy for the Pi"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "numpy>=1.26",
    "gymnasium>=0.29",
]

[project.optional-dependencies]
# Full training stack — GPU machine.
full = [
    "mujoco>=3.1",
    "stable-baselines3>=2.3",
    "torch>=2.2",
    "onnx>=1.16",
    "tensorboard>=2.16",
]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["milo_training*"]
